@@ -1,4 +1,4 @@
-/* $Id: joydefs.c,v 1.5 2003-01-15 02:40:54 btb Exp $ */
+/* $Id: joydefs.c,v 1.6 2003-03-14 05:11:29 btb Exp $ */
 /*
  *
  * SDL joystick support
@@ -70,15 +70,18 @@ void joydef_menuset_1(int nitems, newmenu_item * items, int *last_key, int citem
 void joydefs_config()
 {
 	newmenu_item m[13];
-	int i, i1=5, j, nitems=7;
+	int i, i1 = 5, j, nitems = 10;
 
 	m[0].type = NM_TYPE_RADIO; m[0].text = "KEYBOARD"; m[0].value = 0; m[0].group = 0;
 	m[1].type = NM_TYPE_RADIO; m[1].text = "JOYSTICK"; m[1].value = 0; m[1].group = 0;
 	m[2].type = NM_TYPE_RADIO; m[2].text = "MOUSE"; m[2].value = 0; m[2].group = 0;
 	m[3].type = NM_TYPE_TEXT; m[3].text="";
-	m[4].type = NM_TYPE_MENU; m[4].text="CUSTOMIZE ABOVE";
-	m[5].type = NM_TYPE_MENU; m[5].text="CUSTOMIZE KEYBOARD";
-	m[6].type = NM_TYPE_MENU; m[6].text="CUSTOMIZE D1X KEYS";
+	m[4].type = NM_TYPE_MENU;   m[4].text = TXT_CUST_ABOVE;
+	m[5].type = NM_TYPE_TEXT;   m[5].text = "";
+	m[6].type = NM_TYPE_SLIDER;	m[6].text = TXT_JOYS_SENSITIVITY; m[6].value = Config_joystick_sensitivity; m[6].min_value =0; m[6].max_value = 16;
+	m[7].type = NM_TYPE_TEXT;   m[7].text = "";
+	m[8].type = NM_TYPE_MENU;   m[8].text = TXT_CUST_KEYBOARD;
+	m[9].type = NM_TYPE_MENU;   m[9].text = "CUSTOMIZE D2X KEYS";
 
 	do {
 
@@ -88,6 +91,8 @@ void joydefs_config()
 
 		i1 = newmenu_do1( NULL, TXT_CONTROLS, nitems, m, joydef_menuset_1, i1 );
 
+		Config_joystick_sensitivity = m[6].value;
+
 		for (j = 0; j <= 2; j++)
 			if (m[j].value)
 				Config_control_type = j;
@@ -95,18 +100,18 @@ void joydefs_config()
 		if (Config_control_type == 2)
 			Config_control_type = CONTROL_MOUSE;
 
-		switch(i1)	{
-		case 4: 
+		switch (i1) {
+		case 4:
 			kconfig (i, m[i].text);
 			break;
-		case 5: 
-			kconfig(0, "KEYBOARD"); 
+		case 8:
+			kconfig(0, "KEYBOARD");
 			break;
-		case 6:
-			kconfig(3, "D1X KEYS");
+		case 9:
+			kconfig(4, "D2X KEYS");
 			break;
-		} 
+		}
 
-	} while(i1>-1);
+	} while (i1>-1);
 
 }
